# backend/src/routes/booking.route.js
@@ -2,7 +2,14 @@ const express = require('express');
 const router = express.Router();
 const bookingController = require('../controllers/booking.controller');
 
-router.post('/check-in', bookingController.checkIn);
-router.post('/check-out', bookingController.checkOut);
+router.post('/check-in'
+    // #swagger.tags = ['Bookings']
+    // #swagger.summary = 'Check-in a room'
+    , bookingController.checkIn);
+
+router.post('/check-out'
+    // #swagger.tags = ['Bookings']
+    // #swagger.summary = 'Check-out a room'
+    , bookingController.checkOut);
 
 module.exports = router;
