# backend/swagger-output.json
@@ -23,6 +23,10 @@
     },
     "/api/rooms/": {
       "post": {
+        "tags": [
+          "Rooms"
+        ],
+        "summary": "Create a new room (Admin only)",
         "description": "",
         "parameters": [
           {
@@ -66,6 +70,10 @@
         }
       },
       "get": {
+        "tags": [
+          "Rooms"
+        ],
+        "summary": "Get all rooms",
         "description": "",
         "responses": {
           "200": {
@@ -85,6 +93,10 @@
     },
     "/api/rooms/{id}": {
       "put": {
+        "tags": [
+          "Rooms"
+        ],
+        "summary": "Update a room by ID (Admin only)",
         "description": "",
         "parameters": [
           {
@@ -134,6 +146,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Rooms"
+        ],
+        "summary": "Delete a room by ID (Admin only)",
         "description": "",
         "parameters": [
           {
@@ -161,6 +177,10 @@
     },
     "/api/bookings/check-in": {
       "post": {
+        "tags": [
+          "Bookings"
+        ],
+        "summary": "Check-in a room",
         "description": "",
         "parameters": [
           {
@@ -194,6 +214,10 @@
     },
     "/api/bookings/check-out": {
       "post": {
+        "tags": [
+          "Bookings"
+        ],
+        "summary": "Check-out a room",
         "description": "",
         "parameters": [
           {
@@ -254,6 +278,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
